cmake_minimum_required(VERSION 3.17)
project(Algoritmi_e_Programmazione C)

set(CMAKE_C_STANDARD 99)

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${GCC_ENABLE_WARNINGS}")
set(SOURCE_FILE main.c)


add_executable(Esercizio_1 Programmazione_1/Laboratorio_1/Esercizio_1/main.c)
add_executable(Esercizio_2 Programmazione_1/Laboratorio_1/Esercizio_2/main.c)
add_executable(Esercizio_3 Programmazione_1/Laboratorio_1/Esercizio_3/main.c)
add_executable(Esercizio_4 Programmazione_1/Laboratorio_1/Esercizio_4/main.c)

add_executable(Esercizio_1_2 Programmazione_1/Laboratorio_2/Esercizio_1_2/main.c)
add_executable(Esercizio_2_2 Programmazione_1/Laboratorio_2/Esercizio_2_2/main.c)
add_executable(Esercizio_3_2 Programmazione_1/Laboratorio_2/Esercizio_3_2/main.c)
add_executable(Esercizio_4_2 Programmazione_1/Laboratorio_2/Esercizio_4_2/main.c)
add_executable(Esercizio_5_2 Programmazione_1/Laboratorio_2/Esercizio_5_2/main.c)
add_executable(Esercizio_6_2 Programmazione_1/Laboratorio_2/Esercizio_6_2/main.c)
add_executable(Esercizio_7_2 Programmazione_1/Laboratorio_2/Esercizio_7_2/main.c)

add_executable(Esercizio_1_3 Programmazione_1/Laboratorio_3/Esercizio_1_3/main.c)
add_executable(Approfondimento Programmazione_1/Laboratorio_3/Esercizio_1_3/Approfondimento/approfondimento.c)
add_executable(Esercizio_2_3 Programmazione_1/Laboratorio_3/Esercizio_2_3/main.c)
add_executable(Esercizio_3_3 Programmazione_1/Laboratorio_3/Esercizio_3_3/main.c)
add_executable(Esercizio_4_3 Programmazione_1/Laboratorio_3/Esercizio_4_3/main.c)
add_executable(Esercizio_5_3 Programmazione_1/Laboratorio_3/Esercizio_5_3/main.c)
add_executable(Esercizio_6_3 Programmazione_1/Laboratorio_3/Esercizio_6_3/main.c)
add_executable(Esercizio_7_3 Programmazione_1/Laboratorio_3/Esercizio_7_3/main.c)

add_executable(Esercizio_1_4 Programmazione_1/Laboratorio_4/Esercizio_1_4/main.c)
add_executable(Esercizio_2_4 Programmazione_1/Laboratorio_4/Esercizio_2_4/main.c)
add_executable(Esercizio_3_4 Programmazione_1/Laboratorio_4/Esercizio_3_4/main.c)
add_executable(Esercizio_4_4 Programmazione_1/Laboratorio_4/Esercizio_4_4/main.c)
add_executable(Esercizio_5_4 Programmazione_1/Laboratorio_4/Esercizio_5_4/main.c)
add_executable(Esercizio_6_4 Programmazione_1/Laboratorio_4/Esercizio_6_4/main.c)
add_executable(Esercizio_7_4 Programmazione_1/Laboratorio_4/Esercizio_7_4/main.c)

add_executable(Esercizio_1_5 Programmazione_1/Laboratorio_5/Esercizio_1_5/main.c)
add_executable(Esercizio_2_5 Programmazione_1/Laboratorio_5/Esercizio_2_5/main.c)
add_executable(Esercizio_3_5 Programmazione_1/Laboratorio_5/Esercizio_3_5/main.c)
add_executable(Esercizio_4_5 Programmazione_1/Laboratorio_5/Esercizio_4_5/main.c)
add_executable(Esercizio_5_5 Programmazione_1/Laboratorio_5/Esercizio_5_5/main.c)
add_executable(Esercizio_6_5 Programmazione_1/Laboratorio_5/Esercizio_6_5/main.c)

add_executable(Esercizio_1_6 Programmazione_1/Laboratorio_6/Esercizio_1_6/main.c)
add_executable(Esercizio_2_6 Programmazione_1/Laboratorio_6/Esercizio_2_6/main.c)
add_executable(Esercizio_3_6 Programmazione_1/Laboratorio_6/Esercizio_3_6/main.c)
add_executable(Esercizio_4_6 Programmazione_1/Laboratorio_6/Esercizio_4_6/main.c)
add_executable(Esercizio_5_6 Programmazione_1/Laboratorio_6/Esercizio_5_6/main.c)
add_executable(Esercizio_6_6 Programmazione_1/Laboratorio_6/Esercizio_6_6/main.c)
add_executable(Esercizio_7_6 Programmazione_1/Laboratorio_6/Esercizio_7_6/main.c)
add_executable(Esercizio_8_6 Programmazione_1/Laboratorio_6/Esercizio_8_6/main.c)

add_executable(Esercizio_1_7 Programmazione_1/Laboratorio_7/Esercizio_1_7/main.c)
add_executable(Esercizio_2_7 Programmazione_1/Laboratorio_7/Esercizio_2_7/main.c)
add_executable(Esercizio_3_7 Programmazione_1/Laboratorio_7/Esercizio_3_7/main.c)
add_executable(Esercizio_4_7 Programmazione_1/Laboratorio_7/Esercizio_4_7/main.c)
add_executable(Esercizio_5_7 Programmazione_1/Laboratorio_7/Esercizio_5_7/main.c)
add_executable(Esercizio_6_7 Programmazione_1/Laboratorio_7/Esercizio_6_7/main.c)
add_executable(Esercizio_7_7 Programmazione_1/Laboratorio_7/Esercizio_7_7/main.c)

add_executable(Esercizio_1_8 Programmazione_1/Laboratorio_8/Esercizio_1_8/main.c)
add_executable(Esercizio_2_8 Programmazione_1/Laboratorio_8/Esercizio_2_8/main.c)
add_executable(Esercizio_3_8 Programmazione_1/Laboratorio_8/Esercizio_3_8/main.c)
add_executable(Esercizio_4_8 Programmazione_1/Laboratorio_8/Esercizio_4_8/main.c)
add_executable(Esercizio_5_8 Programmazione_1/Laboratorio_8/Esercizio_5_8/main.c)
add_executable(Esercizio_6_8 Programmazione_1/Laboratorio_8/Esercizio_6_8/main.c)
add_executable(Esercizio_7_8 Programmazione_1/Laboratorio_8/Esercizio_7_8/main.c)

add_executable(Esercizio_1_9 Programmazione_1/Laboratorio_9/Esercizio_1_9/main.c)
add_executable(Esercizio_2_9 Programmazione_1/Laboratorio_9/Esercizio_2_9/main.c)
add_executable(Esercizio_3_9 Programmazione_1/Laboratorio_9/Esercizio_3_9/main.c)
add_executable(Esercizio_4_9 Programmazione_1/Laboratorio_9/Esercizio_4_9/main.c)
add_executable(Esercizio_5_9 Programmazione_1/Laboratorio_9/Esercizio_5_9/main.c)
add_executable(Esercizio_6_9 Programmazione_1/Laboratorio_9/Esercizio_6_9/main.c)
add_executable(Esercizio_7_9 Programmazione_1/Laboratorio_9/Esercizio_7_9/main.c)

add_executable(Esercizio_1_10 Programmazione_1/Laboratorio_10/Esercizio_1_10/main.c)
add_executable(Esercizio_2_10 Programmazione_1/Laboratorio_10/Esercizio_2_10/main.c)
add_executable(Esercizio_3_10 Programmazione_1/Laboratorio_10/Esercizio_3_10/main.c)
add_executable(Esercizio_4_10 Programmazione_1/Laboratorio_10/Esercizio_4_10/main.c)
add_executable(Esercizio_5_10 Programmazione_1/Laboratorio_10/Esercizio_5_10/main.c)

add_executable(Esercizio_1_11 Programmazione_1/Laboratorio_11/Esercizio_1_11/main.c)
add_executable(Esercizio_2_11 Programmazione_1/Laboratorio_11/Esercizio_2_11/main.c)
add_executable(Esercizio_3_11 Programmazione_1/Laboratorio_11/Esercizio_3_11/main.c)
add_executable(Esercizio_4_11 Programmazione_1/Laboratorio_11/Esercizio_4_11/main.c)
add_executable(Esercizio_5_11 Programmazione_1/Laboratorio_11/Esercizio_5_11/main.c)
add_executable(Esercizio_6_11 Programmazione_1/Laboratorio_11/Esercizio_6_11/main.c)
