cmake_minimum_required(VERSION 3.17)
project(Algoritmi_e_Programmazione C)

set(CMAKE_C_STANDARD 99)

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${GCC_ENABLE_WARNINGS}")
set(SOURCE_FILE main.c)


add_executable(Esercizio_5_11 /Users/francoislampasona/Desktop/Laboratorio-Informatica-C-Polito/Laboratorio_11/Esercizio_5_11/main.c)

